--- a/index.html
+++ b/index.html
@@ -265,14 +265,10 @@
       class="navbar about-us w-nav"
     >
       <div class="container-nav w-container">
-        <a
-          href="/index.html"
-          aria-current="page"
-          class="brand-2 w-nav-brand w--current"
-        >
+        <a href="/" aria-current="page" class="brand-2 w-nav-brand w--current">
           <img
             src="./5845778441130066229_99-removebg-preview.png"
-            width="150px"
+            style="width: 100px"
             loading="lazy"
             alt=""
           />
@@ -526,7 +522,7 @@
           <img
             src="./WhatsApp_Image_2023-12-09_at_11.22.35_PM-removebg-preview.png"
             loading="lazy"
-            style="opacity: 1; width: 80%"
+            style="opacity: 1; width: 66%"
             alt=""
             class="image-cards"
           />
@@ -593,6 +589,8 @@
                 transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
                   rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
                 transform-style: preserve-3d;
+                width: 95%;
+                max-width: 65%;
               "
               alt=""
               class="image-phone"
@@ -667,7 +665,7 @@
           </div>
           <div class="calc__block">
             <div class="block__title">Supply</div>
-            <div class="block__value">9,997,059,930.98</div>
+            <div class="block__value">xxxxxxxxxxx</div>
           </div>
           <div class="calc__block">
             <div class="block__title">Tax</div>
