--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
             </div>
             <div class="inliine-block">
               <a href="" target="_blank" class="footer-copyright-link-2"
-                >team@Dogeonsol.xyz</a
+                >team@dogeonsol.meme</a
               >
             </div>
           </div>
