--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       }
     </style>
 
-    <title>Doge</title>
+    <title>Doge On Solana</title>
 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
@@ -440,7 +440,7 @@
             "
             class="heading"
           >
-            Welcome to Doge.
+            Welcome to $SOGE
           </h1>
           <div
             data-w-id="34f87250-a789-9a2f-f44a-1731bfd81d4c"
@@ -452,7 +452,7 @@
             "
             class="centered"
           >
-            <p class="paragraph-large size">"Join the Doge Revolution!</p>
+            <p class="paragraph-large size">Join the $SOGE Revolution!</p>
           </div>
 
           <div class="w-layout-grid grid-button">
@@ -545,15 +545,15 @@
           >
             <h5>ABOUT</h5>
             <div class="h2-block">
-              <h2>Doge</h2>
+              <h2>$SOGE</h2>
             </div>
             <div class="paragraph-margin">
               <p class="paragraph-large">
                 Step into the exciting intersection of meme magic and
                 cutting-edge blockchain technology with Doge on Solana. This
-                innovative venture marries the beloved charm of Dogecoin, the
+                innovative venture marries the beloved charm of SOGEcoin, the
                 original meme cryptocurrency, with the blazing-fast and highly
-                efficient Solana blockchain. Since its inception, Dogecoin has
+                efficient Solana blockchain. Since its inception, SOGEcoin has
                 captivated the hearts of millions with its lighthearted approach
                 to digital currency, and now, it's taking a giant leap forward.
               </p>
@@ -661,7 +661,7 @@
         >
           <div class="calc__block">
             <div class="block__title">Name</div>
-            <div class="block__value">Doge</div>
+            <div class="block__value">Doge On Solana</div>
           </div>
           <div class="calc__block">
             <div class="block__title">Supply</div>
@@ -835,7 +835,7 @@
         <div class="container-footer w-container">
           <div class="copyrates">
             <div class="inline-block-first">
-              © 2024 Doge • All Rights Reserved
+              © 2024 $SOGE • All Rights Reserved
             </div>
             <div class="inliine-block">
               <a href="" target="_blank" class="footer-copyright-link-2"
